--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Clone Youtube Project" />
+    <meta name="apple-mobile-web-app-title" content="CloneTube" />
+    <meta name="application-name" content="CloneTube" />
+    <meta name="msapplication-TileColor" content="#c12323" />
+    <meta name="theme-color" content="#ffffff" />
     <title>CloneTube</title>
     <link
       rel="apple-touch-icon"
@@ -28,10 +32,7 @@
       href="%PUBLIC_URL%/safari-pinned-tab.svg"
       color="#c12323"
     />
-    <meta name="apple-mobile-web-app-title" content="CloneTube" />
-    <meta name="application-name" content="CloneTube" />
-    <meta name="msapplication-TileColor" content="#c12323" />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
