--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="kr">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no,maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Clone Youtube Project" />
     <meta name="apple-mobile-web-app-title" content="CloneTube" />
     <meta name="application-name" content="CloneTube" />
