--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Clone Youtube Project" />
-    <meta name="apple-mobile-web-app-title" content="CloneTube" />
-    <meta name="application-name" content="CloneTube" />
+    <meta name="apple-mobile-web-app-title" content="너튜브" />
+    <meta name="application-name" content="너튜브" />
     <meta name="msapplication-TileColor" content="#c12323" />
     <meta name="theme-color" content="#ffffff" />
-    <title>CloneTube</title>
     <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="%PUBLIC_URL%/apple-touch-icon.png"
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="%PUBLIC_URL%/apple-touch-icon.png"
     />
+    <title>너튜브</title>
     <link
       rel="icon"
       type="image/png"
